# axum-ddd-template

./: .env.example  .gitignore  Cargo.toml  README.md  clippy.toml  skills-lock.json
.kiro/agents/: coding-rust-ddd.json
.kiro/prompts/: revirw.md
.kiro/skills/axum/: SKILL.md
.kiro/skills/clean-ddd-hexagonal/: SKILL.md
.kiro/skills/clean-ddd-hexagonal/references/: LAYERS.md
docker/: Dockerfile  README.md  compose.yml
docs/: rust-best-practices
migrations/: 001_init.down.sql  001_init.up.sql  002_add_updated_at.down.sql  002_add_updated_at.up.sql
src/: main.rs
src/features/: mod.rs
src/features/task/: mod.rs
src/features/task/application/: complete_task.rs  create_task.rs  delete_task.rs  get_task.rs  mod.rs  port.rs
src/features/task/domain/: entity.rs  mod.rs  repository.rs  value_objects.rs
src/features/task/infrastructure/: http.rs  mod.rs  repository.rs
src/features/user/: mod.rs
src/features/user/application/: create_user.rs  delete_user.rs  get_user.rs  mod.rs  port.rs  update_user.rs
src/features/user/domain/: entity.rs  mod.rs  repository.rs
src/features/user/infrastructure/: http.rs  mod.rs  pg_repository.rs
src/shared/: mod.rs
src/shared/application/: mod.rs
src/shared/domain/: entity.rs  error.rs  mod.rs  value_objects.rs
src/shared/infrastructure/: config.rs  database.rs  http.rs  mod.rs
